Switch the "misc" mode cut-off to be static instead of dynamic
It looks like matplotlib/pandas only supports 10 colors.
If our cutoff is below that, then "misc" has the same color as the first entry,
which makes it very hard to see where the boundary is

Switching to a hardcoded limit of 9 instead for simplicity
The old code is in the commit history

+ make the plots minimally prettier by adding a title and removing the series
name on the side

--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -119,10 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_mode_confirms = mode_confirm_vals_df.mode_confirm.sum()\n",
-    "mode_confirm_vals_df[\"quartile\"] = mode_confirm_vals.apply(lambda x: x/total_mode_confirms)\n",
-    "large_chunk_mode_confirm = mode_confirm_vals_df.where(lambda x: x.quartile > 0.01).dropna()\n",
-    "large_chunk_mode_confirm"
+    "total_mode_confirms = mode_confirm_vals.sum()\n",
+    "top_ten_mode_confirm = mode_confirm_vals_df.iloc[0:9]\n",
+    "top_ten_mode_confirm"
    ]
   },
   {
@@ -132,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "misc_count = (total_mode_confirms - large_chunk_mode_confirm.mode_confirm.sum())\n",
+    "misc_count = (total_mode_confirms - top_ten_mode_confirm.mode_confirm.sum())\n",
     "misc_count"
    ]
   },
@@ -143,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "large_chunk_mode_confirm.loc[\"misc\"] = pd.Series({\"mode_confirm\": misc_count , \"quartile\": misc_count/total_mode_confirms})"
+    "top_ten_mode_confirm.loc[\"misc\"] = misc_count"
    ]
   },
   {
@@ -153,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "large_chunk_mode_confirm"
+    "top_ten_mode_confirm"
    ]
   },
   {
@@ -163,7 +162,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = large_chunk_mode_confirm.mode_confirm.plot.pie()"
+    "ax = top_ten_mode_confirm.mode_confirm.plot.pie()\n",
+    "ax.set_ylabel(\"\")\n",
+    "ax.set_title(\"Travel modes selected by users\")"
    ]
   },
   {
@@ -183,8 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "small_chunk_mode_confirm = mode_confirm_vals_df.where(lambda x: x.quartile < 0.01).dropna()\n",
-    "small_chunk_mode_confirm"
+    "below_top_ten_mode_confirm = mode_confirm_vals_df.iloc[9:]\n",
+    "below_top_ten_mode_confirm"
    ]
   },
   {
@@ -194,7 +195,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = small_chunk_mode_confirm.mode_confirm.plot.pie()"
+    "ax = below_top_ten_mode_confirm.mode_confirm.plot.pie()\n",
+    "ax.set_ylabel(\"\")\n",
+    "ax.set_title(\"Expansion of the 'misc' travel modes\")"
    ]
   },
   {
