Support per-month metric displays
Add year, month and program parameters to the notebook, consistent with what
`nbparameterise` wants

Generate file names for the plots of the form "mode_confirm_2021_01_prepilot.png"

Add new drop-downs to the frontend
Change the image lookup code to match the new format

Testing done:
Compared Nov, Dec and Jan mode_confirm objects

--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -11,11 +11,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "automotive-abuse",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = 2020\n",
+    "month = 11\n",
+    "program = \"prepilot\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "respiratory-gibraltar",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import emission.storage.timeseries.abstract_timeseries as esta"
+    "import emission.storage.timeseries.abstract_timeseries as esta\n",
+    "import emission.storage.timeseries.tcquery as esttc\n",
+    "import emission.core.wrapper.localdate as ecwl"
    ]
   },
   {
@@ -26,6 +40,17 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "unauthorized-miami",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_ld = ecwl.LocalDate({\"year\": year, \"month\": month})\n",
+    "tq = esttc.TimeComponentQuery(\"data.start_local_dt\", query_ld, query_ld)"
    ]
   },
   {
@@ -45,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_ct = agg.get_data_df(\"analysis/confirmed_trip\")"
+    "all_ct = agg.get_data_df(\"analysis/confirmed_trip\", tq)"
    ]
   },
   {
@@ -174,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm.png\")"
+    "ax.figure.savefig(\"/plots/mode_confirm_%04d_%02d_%s.png\" % (year, month, program))"
    ]
   },
   {
@@ -207,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand.png\")"
+    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand_%04d_%02d_%s.png\" % (year, month, program))"
    ]
   },
   {
