Add percentage labels to the mode confirm graphs

--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -183,11 +183,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "guilty-resource",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pctFmt = lambda p: '%.1f%%'%p if p > 5 else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "electronic-culture",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = top_ten_mode_confirm.mode_confirm.plot.pie()\n",
+    "ax = top_ten_mode_confirm.mode_confirm.plot.pie(autopct=pctFmt)\n",
     "ax.set_ylabel(\"\")\n",
     "ax.set_title(\"Travel modes selected by users\")"
    ]
@@ -220,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = below_top_ten_mode_confirm.mode_confirm.plot.pie()\n",
+    "ax = below_top_ten_mode_confirm.mode_confirm.plot.pie(autopct=pctFmt)\n",
     "ax.set_ylabel(\"\")\n",
     "ax.set_title(\"Expansion of the 'misc' travel modes\")"
    ]
