Limit to only participant trips, and display the data quality

--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -45,6 +45,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fundamental-compact",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import emission.core.get_database as edb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "nuclear-converter",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "participant_uuid_obj = list(edb.get_profile_db().find({\"install_group\": \"participant\"}, {\"user_id\": 1, \"_id\": 0}))\n",
+    "participant_uuid_str = [u[\"user_id\"] for u in participant_uuid_obj]\n",
+    "participant_uuid_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "unauthorized-miami",
    "metadata": {},
    "outputs": [],
@@ -86,11 +108,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "alike-canberra",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "participant_ct_df = all_ct[all_ct.user_id.isin(participant_uuid_str)]\n",
+    "len(participant_ct_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "authorized-living",
    "metadata": {},
    "outputs": [],
    "source": [
-    "confirmed_ct = all_ct[all_ct.user_input != {}]\n",
+    "confirmed_ct = participant_ct_df[participant_ct_df.user_input != {}]\n",
     "confirmed_ct.head()"
    ]
   },
@@ -183,6 +216,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "controversial-dayton",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confirmed_ct.user_id.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hairy-barcelona",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check quality\n",
+    "cq = (len(confirmed_ct), len(participant_ct_df), (len(confirmed_ct) * 100) / len(participant_ct_df), len(confirmed_ct.user_id.unique()))\n",
+    "quality_text = \"Based on %s confirmed from %s total trips (%.2f%%)\\nFrom %d users\" % cq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "genuine-nicaragua",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quality_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "guilty-resource",
    "metadata": {},
    "outputs": [],
@@ -199,7 +264,7 @@
    "source": [
     "ax = top_ten_mode_confirm.mode_confirm.plot.pie(autopct=pctFmt)\n",
     "ax.set_ylabel(\"\")\n",
-    "ax.set_title(\"Travel modes selected by users\")"
+    "ax.set_title(\"Travel modes selected by users\\n%s\" % quality_text)"
    ]
   },
   {
@@ -232,7 +297,7 @@
    "source": [
     "ax = below_top_ten_mode_confirm.mode_confirm.plot.pie(autopct=pctFmt)\n",
     "ax.set_ylabel(\"\")\n",
-    "ax.set_title(\"Expansion of the 'misc' travel modes\")"
+    "ax.set_title(\"Expansion of the 'misc' travel modes\\n%s\" % quality_text)"
    ]
   },
   {
