--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -231,8 +231,8 @@
    "outputs": [],
    "source": [
     "# check quality\n",
-    "cq = (len(confirmed_ct), len(participant_ct_df), (len(confirmed_ct) * 100) / len(participant_ct_df), len(confirmed_ct.user_id.unique()))\n",
-    "quality_text = \"Based on %s confirmed from %s total trips (%.2f%%)\\nFrom %d users\" % cq"
+    "cq = (len(confirmed_ct), len(confirmed_ct.user_id.unique()), len(participant_ct_df), len(participant_ct_df.user_id.unique()), (len(confirmed_ct) * 100) / len(participant_ct_df), )\n",
+    "quality_text = \"Based on %s confirmed trips from %d users\\nof %s total trips from %d users (%.2f%%)\" % cq"
    ]
   },
   {
