--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -13,7 +13,9 @@
    "id": "colored-frost",
    "metadata": {},
    "source": [
-    "These are the input parameters for the notebook. They will be automatically changed when the scripts to generate monthly statistics are run. You can modify them manually to generate multiple plots locally as well. "
+    "These are the input parameters for the notebook. They will be automatically changed when the scripts to generate monthly statistics are run. You can modify them manually to generate multiple plots locally as well.\n",
+    "\n",
+    "Pass in `None` to remove the filters and plot all data. This is not recommended for production settings, but might be useful for reports based on data snapshots."
    ]
   },
   {
@@ -210,11 +212,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "german-apollo",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_suffix = scaffolding.get_file_suffix(year, month, program)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "tropical-pride",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm_%04d_%02d_%s.png\" % (year, month, program))"
+    "ax.figure.savefig(\"/plots/mode_confirm_%s.png\" % file_suffix)"
    ]
   },
   {
@@ -247,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand_%04d_%02d_%s.png\" % (year, month, program))"
+    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand_%s.png\" % file_suffix)"
    ]
   },
   {
