Use the quality string computation from the scaffolding
Instead of recomputing

Follow on to
5a9264e72fe106395054a7d7e2e388672633123c

--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -172,9 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check quality\n",
-    "cq = (len(expanded_ct), len(expanded_ct.user_id.unique()), len(participant_ct_df), len(participant_ct_df.user_id.unique()), (len(expanded_ct) * 100) / len(participant_ct_df), )\n",
-    "quality_text = \"Based on %s confirmed trips from %d users\\nof %s total trips from %d users (%.2f%%)\" % cq"
+    "quality_text = scaffolding.get_quality_text(participant_ct_df, expanded_ct)"
    ]
   },
   {
