--- a/viz_scripts/mode_purpose_share.ipynb
+++ b/viz_scripts/mode_purpose_share.ipynb
@@ -5,7 +5,17 @@
    "id": "prerequisite-norwegian",
    "metadata": {},
    "source": [
-    "This is a file that blah blah blah"
+    "## Sample code to generate static graphs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "colored-frost",
+   "metadata": {},
+   "source": [
+    "These are the input parameters for the notebook. They will be automatically changed when the scripts to generate monthly statistics are run. You can modify them manually to generate multiple plots locally as well.\n",
+    "\n",
+    "Pass in `None` to remove the filters and plot all data. This is not recommended for production settings, but might be useful for reports based on data snapshots."
    ]
   },
   {
@@ -27,9 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import emission.storage.timeseries.abstract_timeseries as esta\n",
-    "import emission.storage.timeseries.tcquery as esttc\n",
-    "import emission.core.wrapper.localdate as ecwl"
+    "import scaffolding"
    ]
   },
   {
@@ -49,38 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_ld = ecwl.LocalDate({\"year\": year, \"month\": month})\n",
-    "tq = esttc.TimeComponentQuery(\"data.start_local_dt\", query_ld, query_ld)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "opened-lithuania",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agg = esta.TimeSeries.get_aggregate_time_series()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "universal-tonight",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_ct = agg.get_data_df(\"analysis/confirmed_trip\", tq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "current-primary",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_ct.head()"
+    "tq = scaffolding.get_time_query(year, month)"
    ]
   },
   {
@@ -90,8 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confirmed_ct = all_ct[all_ct.user_input != {}]\n",
-    "confirmed_ct.head()"
+    "participant_ct_df = scaffolding.load_all_participant_trips(program, tq)"
    ]
   },
   {
@@ -101,8 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confirm_only = pd.DataFrame(confirmed_ct.user_input.to_list())\n",
-    "confirm_only.head()"
+    "labeled_ct = scaffolding.filter_labeled_trips(participant_ct_df)"
    ]
   },
   {
@@ -112,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confirm_only.mode_confirm.head()"
+    "expanded_ct = scaffolding.expand_userinputs(labeled_ct)"
    ]
   },
   {
@@ -122,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode_confirm_vals = confirm_only.mode_confirm.value_counts()\n",
+    "mode_confirm_vals = expanded_ct.mode_confirm.value_counts()\n",
     "mode_confirm_vals"
    ]
   },
@@ -183,6 +158,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "controversial-dayton",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct.user_id.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hairy-barcelona",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quality_text = scaffolding.get_quality_text(participant_ct_df, expanded_ct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "genuine-nicaragua",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quality_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "guilty-resource",
    "metadata": {},
    "outputs": [],
@@ -199,7 +204,17 @@
    "source": [
     "ax = top_ten_mode_confirm.mode_confirm.plot.pie(autopct=pctFmt)\n",
     "ax.set_ylabel(\"\")\n",
-    "ax.set_title(\"Travel modes selected by users\")"
+    "ax.set_title(\"Travel modes selected by users\\n%s\" % quality_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "german-apollo",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_suffix = scaffolding.get_file_suffix(year, month, program)"
    ]
   },
   {
@@ -209,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm_%04d_%02d_%s.png\" % (year, month, program))"
+    "ax.figure.savefig(\"/plots/mode_confirm_%s.png\" % file_suffix)"
    ]
   },
   {
@@ -232,7 +247,7 @@
    "source": [
     "ax = below_top_ten_mode_confirm.mode_confirm.plot.pie(autopct=pctFmt)\n",
     "ax.set_ylabel(\"\")\n",
-    "ax.set_title(\"Expansion of the 'misc' travel modes\")"
+    "ax.set_title(\"Expansion of the 'misc' travel modes\\n%s\" % quality_text)"
    ]
   },
   {
@@ -242,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand_%04d_%02d_%s.png\" % (year, month, program))"
+    "ax.figure.savefig(\"/plots/mode_confirm_misc_expand_%s.png\" % file_suffix)"
    ]
   },
   {
