--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -69,7 +69,8 @@
     "%store -r dic_re\n",
     "%store -r dic_pur\n",
     "\n",
-    "dic_pur = scaffolding.Missing_dict(dic_pur)"
+    "dic_pur = scaffolding.Missing_dict(dic_pur)\n",
+    "dic_re  = scaffolding.Missing_dict(dic_re)"
    ]
   },
   {
@@ -142,8 +143,8 @@
    "source": [
     "## Mapping new labels with dictionaries\n",
     "expanded_ct['Trip_purpose'] = expanded_ct['purpose_confirm'].replace(dic_pur)\n",
-    "expanded_ct['Mode_confirm'] = expanded_ct['mode_confirm'].map(dic_re)\n",
-    "expanded_ct['Replaced_mode']= expanded_ct['replaced_mode'].map(dic_re)"
+    "expanded_ct['Mode_confirm'] = expanded_ct['mode_confirm'].replace(dic_re)\n",
+    "expanded_ct['Replaced_mode']= expanded_ct['replaced_mode'].replace(dic_re)"
    ]
   },
   {
