--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -69,7 +69,8 @@
     "%store -r dic_re\n",
     "%store -r dic_pur\n",
     "\n",
-    "dic_pur = scaffolding.Missing_dict(dic_pur)"
+    "dic_pur = scaffolding.Missing_dict(dic_pur)\n",
+    "dic_re  = scaffolding.Missing_dict(dic_re)"
    ]
   },
   {
