Set the paramters in the first cell to be non-None
Apparently, `nbparameterise` doesn't work properly if they are None

Testing done: changed 2/3 notebooks

Changed notebooks

```
kshankar-35069s:viz_scripts kshankar$ ./run_from_host/generate_plots.sh generic_metrics_ebike_project.ipynb  prepilot -d 2020 11
kshankar-35069s:viz_scripts kshankar$ ./run_from_host/generate_plots.sh ebike_specific_metrics.ipynb  prepilot -d 2020 11
```

Not changed notebook:

```
kshankar-35069s:viz_scripts kshankar$ ./run_from_host/generate_plots.sh energy_calculations.ipynb  prepilot -d 2020 11
------------------
tq = scaffolding.get_time_query(year, month)
------------------

---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-4-8cbe2437a8ed> in <module>
----> 1 tq = scaffolding.get_time_query(year, month)

NameError: name 'year' is not defined
NameError: name 'year' is not defined
```

--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -25,9 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
-    "program = None"
+    "year = 2020\n",
+    "month = 11\n",
+    "program = \"prepilot\""
    ]
   },
   {
