--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -25,9 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
-    "program = None"
+    "year = 2020\n",
+    "month = 11\n",
+    "program = \"prepilot\""
    ]
   },
   {
