fix the filenames
When we refactored the filename code as part of
https://github.com/e-mission/em-public-dashboard/commit/5a9264e72fe106395054a7d7e2e388672633123c
we removed the `_`

But then the filenames look like
ntrips_ebike_purpose_202011prepilot.png
instead of
ntrips_ebike_purpose_2020_11_prepilot.png

Fixing this by prepending `-` to the components, which then means that we have
to remove the trailing `_` from all filenames to avoid getting
ntrips_ebike_purpose__2020_11_prepilot.png

--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -1355,7 +1355,7 @@
     "labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True)[:9].keys().tolist()\n",
     "values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True)[:9].tolist()\n",
     "plot_title= \"Number of trips for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_mode_confirm_%s.png' % file_suffix\n",
+    "file_name= 'ntrips_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)"
    ]
   },
@@ -1388,7 +1388,7 @@
     "labels_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True)[:10].keys().tolist()\n",
     "values_rm = expanded_ct['Replaced_mode'].value_counts(dropna=True)[:10].tolist()\n",
     "plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_replaced_mode_%s.png' % file_suffix\n",
+    "file_name= 'ntrips_replaced_mode%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_rm,values_rm,file_name)"
    ]
   },
@@ -1452,7 +1452,7 @@
     "labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True)[:10].keys().tolist()\n",
     "values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True)[:10].tolist()\n",
     "plot_title=\"Number of trips for each purposes (selected by users)\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_purpose_%s.png' % file_suffix\n",
+    "file_name= 'ntrips_purpose%s.png' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)"
    ]
   },
@@ -1552,7 +1552,7 @@
     "labels_miles = labels_m[:5]\n",
     "values_miles = values_m[:5]\n",
     "plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name ='miles_mode_confirm_%s.png' % file_suffix\n",
+    "file_name ='miles_mode_confirm%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_miles,values_miles,file_name)\n",
     "print(miles)"
    ]
