--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -206,7 +206,7 @@
     "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True)[:10].keys().tolist()\n",
     "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True)[:10].tolist()\n",
     "plot_title=\"Number of trips for each purpose for eBike only\\n%s\" % quality_text\n",
-    "file_name= 'ntrips_ebike_purpose_%s.png' % file_suffix\n",
+    "file_name= 'ntrips_ebike_purpose%s.png' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)"
    ]
   },
@@ -220,7 +220,7 @@
     "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True)[:7].keys().tolist()\n",
     "values_eb = data_eb.Replaced_mode.value_counts(dropna=True)[:7].tolist()\n",
     "plot_title=\"Number of trips for each replaced transport mode for eBike only\\n%s\" % quality_text\n",
-    "file_name ='ntrips_ebike_replaced_mode_%s.png' % file_suffix\n",
+    "file_name ='ntrips_ebike_replaced_mode%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)"
    ]
   },
@@ -255,7 +255,7 @@
     "labels = labels_m[:5]\n",
     "values = values_m[:5]\n",
     "plot_title=\"Distribution of Miles Replaced by Ebike \\n%s\" % quality_text\n",
-    "file_name ='miles_ebike_replaced_mode_%s.png' % file_suffix\n",
+    "file_name ='miles_ebike_replaced_mode%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels,values,file_name)\n",
     "print(dg)"
    ]
