Add a legend to energy impact plot, and added the frequency and average miles plots

--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -261,12 +261,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "honest-dylan",
+   "metadata": {},
+   "source": [
+    "# Average Miles per ebike trip"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "resident-findings",
+   "id": "growing-portsmouth",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = dg.sort_values(by=['Average (miles)'], ascending=False)\n",
+    "x='Replaced_mode'\n",
+    "y='Average (miles)'\n",
+    "\n",
+    "plot_title=\" Average Miles for each replaced mode (selected by users)\\n%s\" % quality_text\n",
+    "file_name ='average_miles_replaced_mode_%s.png' % file_suffix\n",
+    "\n",
+    "barplot_mode(data,x,y,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "committed-favorite",
+   "metadata": {},
+   "source": [
+    "# Number of Trips by Day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "patent-performance",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
+    "fq_days = fq_days.reset_index()\n",
+    "fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "limiting-handling",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = fq_days\n",
+    "x = 'Day of the Month'\n",
+    "y = 'Number of Trips'\n",
+    "\n",
+    "plot_title=\"Number of ebike trips by day\\n%s\" % quality_text\n",
+    "file_name ='number_of_ebike_trips_per_day_%s.png' % file_suffix\n",
+    "\n",
+    "barplot_day(data,x,y,plot_title,file_name)"
+   ]
   }
  ],
  "metadata": {
