--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -315,12 +315,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "demanding-franklin",
+   "metadata": {},
+   "source": [
+    "# Average Miles per transport mode selected (Mode_confirm)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inner-recorder",
+   "id": "patent-cliff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = miles.sort_values(by=['Average (miles)'], ascending=False)\n",
+    "x='Mode_confirm'\n",
+    "y='Average (miles)'\n",
+    "\n",
+    "plot_title=\" Average Miles for each mode (selected by users)\\n%s\" % quality_text\n",
+    "file_name ='average_miles_mode_confirm_%s.png' % file_suffix\n",
+    "\n",
+    "barplot_mode(data,x,y,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sound-bradley",
+   "metadata": {},
+   "source": [
+    "# Number of Trips by Day¶"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "alleged-subsection",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fq_days = expanded_ct.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
+    "fq_days = fq_days.reset_index()\n",
+    "fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
+    "fq_days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "working-michigan",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = fq_days\n",
+    "x = 'Day of the Month'\n",
+    "y = 'Number of Trips'\n",
+    "\n",
+    "plot_title=\"Number of trips by day\\n%s\" % quality_text\n",
+    "file_name ='number_of_trips_by_day_%s.png' % file_suffix\n",
+    "\n",
+    "barplot_day(data,x,y,plot_title,file_name)"
+   ]
   }
  ],
  "metadata": {
