Add two new metrics to the dashboard
Metrics checked in
https://github.com/e-mission/em-public-dashboard/pull/14

This change:
- fixes the filenames to be be consistent with https://github.com/e-mission/em-public-dashboard/pull/12 by removing the trailing slash
- added new metrics to the list of metrics
- added the metrics required by CEO to the main screen and fixed the x,y locations

--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -278,7 +278,7 @@
     "y='Average (miles)'\n",
     "\n",
     "plot_title=\" Average Miles for each replaced mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name ='average_miles_replaced_mode_%s.png' % file_suffix\n",
+    "file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
     "\n",
     "barplot_mode(data,x,y,plot_title,file_name)"
    ]
@@ -315,7 +315,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of ebike trips by day\\n%s\" % quality_text\n",
-    "file_name ='number_of_ebike_trips_per_day_%s.png' % file_suffix\n",
+    "file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)"
    ]
