--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -345,7 +345,7 @@
     "y='Average (miles)'\n",
     "\n",
     "plot_title=\" Average Miles for each mode (selected by users)\\n%s\" % quality_text\n",
-    "file_name ='average_miles_mode_confirm_%s.png' % file_suffix\n",
+    "file_name ='average_miles_mode_confirm%s.png' % file_suffix\n",
     "\n",
     "barplot_mode(data,x,y,plot_title,file_name)"
    ]
@@ -383,7 +383,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of trips by day\\n%s\" % quality_text\n",
-    "file_name ='number_of_trips_by_day_%s.png' % file_suffix\n",
+    "file_name ='ntrips_per_day%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)"
    ]
