missing dictionary key fixed, and add a bar plot with count (second axis)

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -41,6 +41,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from collections import defaultdict\n",
+    "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
     "%matplotlib inline"
@@ -69,8 +71,19 @@
     "%store -r dic_re\n",
     "%store -r dic_pur\n",
     "\n",
-    "dic_pur = scaffolding.Missing_dict(dic_pur)\n",
-    "dic_re  = scaffolding.Missing_dict(dic_re)"
+    "# convert a dictionary to a defaultdict\n",
+    "dic_pur = defaultdict(lambda: 'Other',dic_pur)\n",
+    "dic_re = defaultdict(lambda: 'Other',dic_re)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "corrected-seven",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic_pur"
    ]
   },
   {
@@ -132,9 +145,9 @@
    "outputs": [],
    "source": [
     "## Mapping new labels with dictionaries\n",
-    "expanded_ct['Trip_purpose'] = expanded_ct['purpose_confirm'].replace(dic_pur)\n",
-    "expanded_ct['Mode_confirm'] = expanded_ct['mode_confirm'].replace(dic_re)\n",
-    "expanded_ct['Replaced_mode']= expanded_ct['replaced_mode'].replace(dic_re)"
+    "expanded_ct['Trip_purpose']= expanded_ct['purpose_confirm'].map(dic_pur)\n",
+    "expanded_ct['Mode_confirm']= expanded_ct['mode_confirm'].map(dic_re)\n",
+    "expanded_ct['Replaced_mode']= expanded_ct['replaced_mode'].map(dic_re)"
    ]
   },
   {
