--- a/viz_scripts/mapping_dictionaries.ipynb
+++ b/viz_scripts/mapping_dictionaries.ipynb
@@ -17,9 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ei = pd.read_csv(r'auxiliary_files/energy_intensity.csv')\n",
     "df_pur= pd.read_csv(r'auxiliary_files/purpose_labels.csv')\n",
     "df_re = pd.read_csv(r'auxiliary_files/mode_labels.csv')\n",
+    "df_ei = pd.read_csv(r'auxiliary_files/energy_intensity.csv')\n",
     "\n",
     "#dictionaries:\n",
     "dic_pur = dict(zip(df_pur.purpose_confirm,df_pur.bin_purpose)) # bin purpose\n",
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_re "
+    "df_pur"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# Cleaning the trip purpose attribute\n",
-    "dic_pur "
+    "dic_pur"
    ]
   },
   {
@@ -73,10 +73,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hairy-adventure",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "informed-asthma",
+   "metadata": {},
    "outputs": [],
    "source": [
     "%store dic_ei \n",
