--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -41,6 +41,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from collections import defaultdict\n",
+    "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
     "%matplotlib inline"
@@ -69,8 +71,9 @@
     "%store -r dic_re\n",
     "%store -r dic_pur\n",
     "\n",
-    "dic_pur = scaffolding.Missing_dict(dic_pur)\n",
-    "dic_re  = scaffolding.Missing_dict(dic_re)"
+    "# convert a dictionary to a defaultdict\n",
+    "dic_pur = defaultdict(lambda: 'Other',dic_pur)\n",
+    "dic_re = defaultdict(lambda: 'Other',dic_re)"
    ]
   },
   {
@@ -142,9 +145,19 @@
    "outputs": [],
    "source": [
     "## Mapping new labels with dictionaries\n",
-    "expanded_ct['Trip_purpose'] = expanded_ct['purpose_confirm'].replace(dic_pur)\n",
-    "expanded_ct['Mode_confirm'] = expanded_ct['mode_confirm'].replace(dic_re)\n",
-    "expanded_ct['Replaced_mode']= expanded_ct['replaced_mode'].replace(dic_re)"
+    "expanded_ct['Trip_purpose']= expanded_ct['purpose_confirm'].map(dic_pur)\n",
+    "expanded_ct['Mode_confirm']= expanded_ct['mode_confirm'].map(dic_re)\n",
+    "expanded_ct['Replaced_mode']= expanded_ct['replaced_mode'].map(dic_re)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "coral-bicycle",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic_pur"
    ]
   },
   {
@@ -252,8 +265,8 @@
     "    labels_m.append(x)\n",
     "    values_m.append(y)\n",
     "\n",
-    "labels = labels_m[:5]\n",
-    "values = values_m[:5]\n",
+    "labels = labels_m[:7]\n",
+    "values = values_m[:7]\n",
     "plot_title=\"Distribution of Miles Replaced by Ebike \\n%s\" % quality_text\n",
     "file_name ='miles_ebike_replaced_mode_%s.png' % file_suffix\n",
     "pie_chart_mode(plot_title,labels,values,file_name)\n",
@@ -278,11 +291,12 @@
     "data = dg.sort_values(by=['Average (miles)'], ascending=False)\n",
     "x='Replaced_mode'\n",
     "y='Average (miles)'\n",
+    "y2 = \"Count\"\n",
     "\n",
     "plot_title=\" Average Miles for each replaced mode (selected by users)\\n%s\" % quality_text\n",
     "file_name ='average_miles_replaced_mode_%s.png' % file_suffix\n",
     "\n",
-    "barplot_mode(data,x,y,plot_title,file_name)"
+    "barplot_mode2(data,x,y,y2,plot_title,file_name)"
    ]
   },
   {
