Several viz fixes
- assertion that we don't have mode and replaced mode = pilot ebike after cleaning and mapping (related to 36ff09b62af5c190a2ee90326b6d2deb43e50489)
- add viz for day of week since that is the frequency metric that makes sense across months (for both regular bike and eBike)
- add viz for commute trips, so we can accurately compare with Denver mobility goals

--- a/viz_scripts/ebike_specific_metrics.ipynb
+++ b/viz_scripts/ebike_specific_metrics.ipynb
@@ -150,6 +150,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "changed-aquarium",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(expanded_ct[(expanded_ct['Mode_confirm'] == 'Pilot ebike') & (expanded_ct[\"Replaced_mode\"] == \"Pilot ebike\")]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "every-stanley",
    "metadata": {},
    "outputs": [],
@@ -273,11 +283,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = dg.sort_values(by=['Average (miles)'], ascending=False)\n",
+    "data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
     "x='Replaced_mode'\n",
     "y='Average (miles)'\n",
     "\n",
-    "plot_title=\" Average Miles for each replaced mode (selected by users)\\n%s\" % quality_text\n",
+    "plot_title=\" Average Miles for each replaced mode with > 3 entries\\n%s\" % quality_text\n",
     "file_name ='average_miles_replaced_mode%s.png' % file_suffix\n",
     "\n",
     "barplot_mode(data,x,y,plot_title,file_name)"
@@ -316,6 +326,46 @@
     "\n",
     "plot_title=\"Number of ebike trips by day\\n%s\" % quality_text\n",
     "file_name ='ntrips_ebike_per_day%s.png' % file_suffix\n",
+    "\n",
+    "barplot_day(data,x,y,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pediatric-cowboy",
+   "metadata": {},
+   "source": [
+    "# Number of Trips by day of week¶"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "metropolitan-musical",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
+    "fq_weekdays = fq_weekdays.reset_index()\n",
+    "fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
+    "weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
+    "fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
+    "fq_weekdays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "scientific-underground",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = fq_weekdays\n",
+    "x = 'Weekday'\n",
+    "y = 'Number of Trips'\n",
+    "\n",
+    "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
+    "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)"
    ]
