--- a/viz_scripts/generic_metrics_ebike_project.ipynb
+++ b/viz_scripts/generic_metrics_ebike_project.ipynb
@@ -203,6 +203,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "about-seafood",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
+    "values_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).tolist()\n",
+    "plot_title= \"Number of commute trips for each mode (selected by users)\\n%s\" % quality_text\n",
+    "file_name= 'ntrips_commute_mode_confirm%s.png' % file_suffix\n",
+    "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
+    "print(expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "biological-vancouver",
    "metadata": {},
@@ -340,11 +355,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = miles.sort_values(by=['Average (miles)'], ascending=False)\n",
+    "data = miles.drop((miles.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
     "x='Mode_confirm'\n",
     "y='Average (miles)'\n",
     "\n",
-    "plot_title=\" Average Miles for each mode (selected by users)\\n%s\" % quality_text\n",
+    "plot_title=\" Average Miles for each mode with > 3 entries\\n%s\" % quality_text\n",
     "file_name ='average_miles_mode_confirm%s.png' % file_suffix\n",
     "\n",
     "barplot_mode(data,x,y,plot_title,file_name)"
@@ -387,8 +402,47 @@
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)"
    ]
-  }
- ],
+  },
+  {
+   "cell_type": "markdown",
+   "id": "challenging-julian",
+   "metadata": {},
+   "source": [
+    "# Number of Trips by day of week¶"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hollywood-optimization",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fq_weekdays = expanded_ct.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
+    "fq_weekdays = fq_weekdays.reset_index()\n",
+    "fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
+    "weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
+    "fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
+    "fq_weekdays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fallen-gender",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = fq_weekdays\n",
+    "x = 'Weekday'\n",
+    "y = 'Number of Trips'\n",
+    "\n",
+    "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
+    "file_name ='ntrips_per_weekday%s.png' % file_suffix\n",
+    "\n",
+    "barplot_day(data,x,y,plot_title,file_name)"
+   ]
+  },
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
