added a function to CO2 calulations
based on ei values and updated factor from Shankari's report

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -326,6 +326,117 @@
     "file_name ='sketch_energy_impact_ebike%s.png' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "black-aruba",
+   "metadata": {},
+   "source": [
+    "# CO2 Emmissions Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "expressed-mother",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct.Mode_confirm.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "desperate-application",
+   "metadata": {},
+   "source": [
+    "(df[\"distance_miles\"]/23.2)*19.60\n",
+    "miles*mpg = gal* lb CO2/gal\n",
+    "\n",
+    "ebike\n",
+    "kWH/passenger mile *0.001 (MWH/kWH)* lb CO2/MWH\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "careful-structure",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CO2_emmsions(df):\n",
+    "    if (df[\"Mode_confirm\"] == 'Car, drove alone'):\n",
+    "        return  ((df[\"distance_miles\"]*4374)*0.000001)*157.2 \n",
+    "    elif (df[\"Mode_confirm\"] ==  'Car, with others'):\n",
+    "        return  ((df[\"distance_miles\"]*2840)*0.000001)*157.2 \n",
+    "    elif (df[\"Mode_confirm\"] == 'Taxi/Uber/Lyft'):\n",
+    "        return  ((df[\"distance_miles\"]*7214)*0.000001)*157.2 \n",
+    "    elif df[\"Mode_confirm\"] ==  'Bus':\n",
+    "        return ((df[\"distance_miles\"]*4560)*0.000001)*163.1\n",
+    "    elif df[\"Mode_confirm\"] ==  'Train':\n",
+    "        return (df[\"distance_miles\"]*0.37*0.001*1166)\n",
+    "    elif df[\"Mode_confirm\"] ==  'Pilot ebike'or (df[\"Mode_confirm\"] == 'Bikeshare'):\n",
+    "        return (df[\"distance_miles\"]*0.022*0.001*1166)\n",
+    "    elif df[\"Mode_confirm\"] == 'Scooter share' :\n",
+    "        return (df[\"distance_miles\"]*0.027*0.001*1166)\n",
+    "  \n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "protective-personal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct['lbCO2'] = expanded_ct.apply(CO2_emmsions, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "collect-demographic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct[[\"distance_miles\",'Mode_confirm', 'lbCO2']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "amended-racing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = expanded_ct\n",
+    "x = 'lbCO2'\n",
+    "y = 'Mode_confirm'\n",
+    "\n",
+    "\n",
+    "plot_title=\"Pounds of CO2 Emmisions by mode selected by users\"\n",
+    "file_name ='CO2%s.png' % file_suffix\n",
+    "barplot_mode(data,x,y,plot_title,file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hearing-occupation",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "employed-system",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
